--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,28 @@
 body {
-  background: #3C887E !important;
+  background: #3c887e !important;
 }
 
 .container {
   max-width: 400px !important;
 }
 
-input[type=text],
-input[type=text]:focus{
+input[type="text"],
+input[type="text"]:focus {
   color: white;
   border: none;
   background: rgba(0, 0, 0, 0.2);
   max-width: 400px;
 }
 
-.todos li{
-  background: #E0F2E9;
+.todos li {
+  background: #e0f2e9;
 }
 
 delete {
   cursor: pointer;
 }
 
-
+.filtered {
+  visibility: hidden;
+  /* display: none is not working because The Font Awesome class has an inline property display: inline-block; that overwrites display property. */
+}
